added file to explain type conversions in Python

--- a/README
+++ b/README
@@ -7,3 +7,4 @@ I am listing the order in which you may want to read these examples. The order b
  - python_strings.py
  - python_numbers.py
  - python_booleans.py
+ - python_conversions.py
