--- a/README
+++ b/README
@@ -8,3 +8,4 @@ I am listing the order in which you may want to read these examples. The order b
  - python_numbers.py
  - python_booleans.py
  - python_conversions.py
+ - using_modules.py
