made a few changes to the python_lists.py file

--- a/README
+++ b/README
@@ -9,3 +9,6 @@ I am listing the order in which you may want to read these examples. The order b
  - python_booleans.py
  - python_conversions.py
  - using_modules.py
+ - string_interpolation.py
+ - python_lists.py
+ 
