made a few changes to the python_dictionaries.py file

--- a/README
+++ b/README
@@ -11,4 +11,4 @@ I am listing the order in which you may want to read these examples. The order b
  - using_modules.py
  - string_interpolation.py
  - python_lists.py
- 
+ - python_dictionary.py
